--- a/DinoJockey/DinoJockey/DinoJockey.csproj
+++ b/DinoJockey/DinoJockey/DinoJockey.csproj
@@ -23,8 +23,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Gum.MonoGame" Version="2025.11.23.2" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.*" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
+    <!-- Integración de Gum Runtime para MonoGame (para UI). Reemplaza versión si deseas -->
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MonoGameLibrary\MonoGameLibrary.csproj" />
